pegasus/src/Pegasus/Compiler/tests/invalidMOF/result.master
qualiferDeclInvalidTests
Parsing error: badQualifierDecl1.mof:4: syntax error before 'badFlavorKeyword'
Parsing error: badQualifierDecl2.mof:4: syntax error before 'Restricted'
Parsing error: badQualifierDecl3.mof:4: syntax error before ')'
Parsing error: badQualifierDecl5.mof:4: syntax error before ';'
Parsing error: badQualifierDecl6.mof:4: syntax error before ')'
Parsing error: badQualifierDecl10.mof:3: syntax error before 'badScopeKeyword'
Parsing error: badQualifierDecl11.mof:3: syntax error before ')'
Parsing error: badQualifierDecl12.mof:3: syntax error before 'association'
Parsing error: badQualifierDecl13.mof:3: syntax error before ')'
Parsing error: badQualifierDecl15.mof:4: syntax error before 'Flavor'
Parsing error: badQualifierDecl16.mof:3: syntax error before ')'
Parsing error: badQualifierDecl20.mof:3: "scope" definition required on Qualifier Declaration before 'Flavor'
instAliasInvalidTests
Parsing error: parse error: Error getting class NoClass from namespace root: CIM_ERR_NOT_FOUND: NoClass
Parsing error: parse error: Error getting class X from namespace root: CIM_ERR_NOT_FOUND: X
Parsing error: parse error: Error getting class X from namespace root: CIM_ERR_NOT_FOUND: X
pragmaInvalidTests
Warning: Pragma "junkname" not implemented by the compiler. Ignored
Warning: Pragma locale value "junkvalue" not defined by compiler. Ignored
qualifierDefInvalidTests
Parsing error: badQualifierDef1.mof:12: Invalid boolean value:  Does not match parsed type String.  before ']'
invalidClassDefinitionTests
